--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3577,3 +3577,4 @@ payload:
   - DOMAIN-SUFFIX,wwentua.com
   - DOMAIN-SUFFIX,jiatianxiazhuangshi.com
   - DOMAIN-SUFFIX,apad.pro
+  - DOMAIN-SUFFIX,yoozhibo.net
