--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -972,3 +972,4 @@ payload:
   - DOMAIN-SUFFIX,spamhaus.org
   - DOMAIN-SUFFIX,bugsnag.com
   - DOMAIN-SUFFIX,geotrust.com
+  - DOMAIN-SUFFIX,pgl.yoyo.org
