--- a/rule-provider/Generally·Media.yaml
+++ b/rule-provider/Generally·Media.yaml
@@ -63,6 +63,9 @@ payload:
   - DOMAIN-SUFFIX,520cc.cc
   - DOMAIN-SUFFIX,520click.com
   - DOMAIN-SUFFIX,jav.com
+  - DOMAIN-SUFFIX,jable.tv
+  - DOMAIN-SUFFIX,mushroomtrack.com
+  - DOMAIN-SUFFIX,sb-cd.com
   - DOMAIN-SUFFIX,jav101.com
   - DOMAIN-SUFFIX,jav2be.com
   - DOMAIN-SUFFIX,jav68.tv
