--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3579,3 +3579,4 @@ payload:
   - DOMAIN-SUFFIX,jiatianxiazhuangshi.com
   - DOMAIN-SUFFIX,apad.pro
   - DOMAIN-SUFFIX,yoozhibo.net
+  - DOMAIN-SUFFIX,zhujiceping.com
