--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -975,3 +975,4 @@ payload:
   - DOMAIN-SUFFIX,geotrust.com
   - DOMAIN-SUFFIX,pgl.yoyo.org
   - DOMAIN-SUFFIX,openstreetmap.org
+  - DOMAIN-SUFFIX,shuax.com
