--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -977,3 +977,4 @@ payload:
   - DOMAIN-SUFFIX,pgl.yoyo.org
   - DOMAIN-SUFFIX,openstreetmap.org
   - DOMAIN-SUFFIX,shuax.com
+  - DOMAIN-SUFFIX,firefox.com
