--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3580,3 +3580,4 @@ payload:
   - DOMAIN-SUFFIX,apad.pro
   - DOMAIN-SUFFIX,yoozhibo.net
   - DOMAIN-SUFFIX,zhujiceping.com
+  - DOMAIN-SUFFIX,176001.tv
