--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -101,6 +101,9 @@ payload:
   - DOMAIN,podcasts.apple.com
   - DOMAIN,bookkeeper.itunes.apple.com
   - DOMAIN,play.itunes.apple.com
+  - DOMAIN,gsas.apple.com
+  - DOMAIN,11-courier.push.apple.com
+  - DOMAIN,gdmf.apple.com
   - IP-CIDR6,2403:300:a30:4000::1f2/128,no-resolve
 # > BT
   - DOMAIN-KEYWORD,www.1lou.
