--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -82,6 +82,13 @@ payload:
   - DOMAIN-SUFFIX,aapks.com
   - DOMAIN-SUFFIX,f-droid.org
 # > Apple
+  - DOMAIN-KEYWORD,courier.push.apple.com
+  - DOMAIN,account.apple.com
+  - DOMAIN,amp-account.apps.apple.com
+  - DOMAIN,auth.apps.apple.com
+  - DOMAIN,buy.apps.apple.com
+  - DOMAIN,gdmf.apple.com
+  - DOMAIN,gsas.apple.com
   - DOMAIN,api-glb-sea.smoot.apple.com
   - DOMAIN,appleid.apple.com
   - DOMAIN,apps.apple.com
@@ -101,9 +108,6 @@ payload:
   - DOMAIN,podcasts.apple.com
   - DOMAIN,bookkeeper.itunes.apple.com
   - DOMAIN,play.itunes.apple.com
-  - DOMAIN,gsas.apple.com
-  - DOMAIN,11-courier.push.apple.com
-  - DOMAIN,gdmf.apple.com
   - IP-CIDR6,2403:300:a30:4000::1f2/128,no-resolve
 # > BT
   - DOMAIN-KEYWORD,www.1lou.
