--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -123,6 +123,9 @@ payload:
   - DOMAIN,bookkeeper.itunes.apple.com
   - DOMAIN,play.itunes.apple.com
   - IP-CIDR6,2403:300:a30:4000::1f2/128,no-resolve
+# > Asus
+  - DOMAIN-SUFFIX,asuscomm.com
+  - DOMAIN-SUFFIX,bazaarvoice.com
 # > BT
   - DOMAIN-KEYWORD,www.1lou.
   - DOMAIN-SUFFIX,Rarbgprx.org
