--- a/rule-provider/Test.yaml
+++ b/rule-provider/Test.yaml
@@ -15,3 +15,4 @@ payload:
   - DOMAIN-KEYWORD,ipv4.
   - DOMAIN-KEYWORD,ipv6.
   - DOMAIN-SUFFIX,speed.misaka.one
+  - DOMAIN-KEYWORD,gubo.org/speedtest
