--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3581,3 +3581,5 @@ payload:
   - DOMAIN-SUFFIX,yoozhibo.net
   - DOMAIN-SUFFIX,zhujiceping.com
   - DOMAIN-SUFFIX,176001.tv
+  - DOMAIN-SUFFIX,hjenglish.com
+  - DOMAIN-SUFFIX,hjapi.com
