--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1,5 +1,6 @@
 payload:
 # > Ad
+  - DOMAIN-SUFFIX,samsungihp.cn
   - DOMAIN-SUFFIX,ajay.app
   - DOMAIN-SUFFIX,adtidy.org
   - DOMAIN-SUFFIX,easylist.to
