--- a/rule-provider/Apple.yaml
+++ b/rule-provider/Apple.yaml
@@ -37,3 +37,4 @@ payload:
   - IP-CIDR,192.35.50.0/24,no-resolve
   - IP-CIDR,198.183.17.0/24,no-resolve
   - IP-CIDR,205.180.175.0/24,no-resolve
+  - IP-CIDR6,2403:300:a30:3000::1f2/128,no-resolve
