--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1018,3 +1018,4 @@ payload:
   - DOMAIN-SUFFIX,symcb.com
   - DOMAIN-SUFFIX,python.org
   - DOMAIN-SUFFIX,faststone.org
+  - DOMAIN-SUFFIX,opim.com
