--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1019,4 +1019,4 @@ payload:
   - DOMAIN-SUFFIX,symcb.com
   - DOMAIN-SUFFIX,python.org
   - DOMAIN-SUFFIX,faststone.org
-  - DOMAIN-SUFFIX,opim.com
+  - DOMAIN-SUFFIX,zopim.com
