--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1020,3 +1020,4 @@ payload:
   - DOMAIN-SUFFIX,python.org
   - DOMAIN-SUFFIX,faststone.org
   - DOMAIN-SUFFIX,zopim.com
+  - DOMAIN-SUFFIX,s2s.singular.net
