--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -30,6 +30,8 @@ payload:
   - IP-CIDR,45.125.0.26/32,no-resolve
   - IP-CIDR6,2400:6180:0:d0::45a:b001/128,no-resolve
   - IP-CIDR6,2403:fbc0:1000::babe/128,no-resolve
+# > DNS（abroad-direct）
+  - DOMAIN-SUFFIX,adguard-dns.com
 # > NTP(CN)
   - DOMAIN-SUFFIX,android.pool.ntp.org
   - DOMAIN-SUFFIX,cn.ntppool.org
