--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -225,6 +225,7 @@ payload:
   - DOMAIN,doh.opendns.com
   - DOMAIN,one.one.one.one
   - DOMAIN,unfiltered.adguard-dns.com
+  - DOMAIN-SUFFIX,dash.xns.one
   - IP-CIDR,1.0.0.1/32,no-resolve
   - IP-CIDR,1.1.1.1/32,no-resolve
   - IP-CIDR,8.8.4.4/32,no-resolve
