--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -34,6 +34,7 @@ payload:
   - DOMAIN-SUFFIX,adguard-dns.com
   - DOMAIN-SUFFIX,adguard-dns.io
   - DOMAIN-SUFFIX,pro.xns.one
+  - DOMAIN-SUFFIX,pro.xns.rodeo
 # > NTP(CN)
   - DOMAIN-SUFFIX,android.pool.ntp.org
   - DOMAIN-SUFFIX,cn.ntppool.org
