--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -37,6 +37,8 @@ payload:
   - DOMAIN-SUFFIX,pro.xns.rodeo
   - DOMAIN-SUFFIX,hk.nxns.link
   - DOMAIN-SUFFIX,xns.rodeo
+  - IP-CIDR,8.217.246.48/32,no-resolve
+  - IP-CIDR,45.249.245.247/32,no-resolve
 # > NTP(CN)
   - DOMAIN-SUFFIX,android.pool.ntp.org
   - DOMAIN-SUFFIX,cn.ntppool.org
