--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -25,9 +25,10 @@ payload:
   - IP-CIDR6,2001:300::6/128,no-resolve
 # > DNS
   - DOMAIN-SUFFIX,adguard-dns.com
-  - DOMAIN-SUFFIX,pro.xns.one
-  - DOMAIN-SUFFIX,pro.xns.rodeo
-  - DOMAIN-SUFFIX,hk.nxns.link
+  - DOMAIN-SUFFIX,xns.one
+  - DOMAIN-SUFFIX,xns.rodeo
+  - DOMAIN-SUFFIX,nxns.link
+  - IP-CIDR,103.143.81.71/32,no-resolve
   - IP-CIDR,8.217.246.48/32,no-resolve
   - IP-CIDR,45.249.245.247/32,no-resolve
   - IP-CIDR,103.150.8.98/32,no-resolve
