--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -23,7 +23,11 @@ payload:
   - IP-CIDR,103.2.57.6/32,no-resolve
   - IP-CIDR6,2001:300::5/128,no-resolve
   - IP-CIDR6,2001:300::6/128,no-resolve
-# > DNS
+  - DOMAIN,doh.dns.sb
+  - IP-CIDR,103.121.210.210/32,no-resolve
+  - IP-CIDR,45.125.0.26/32,no-resolve
+  - IP-CIDR6,2400:6180:0:d0::45a:b001/128,no-resolve
+  - IP-CIDR6,2403:fbc0:1000::babe/128,no-resolve
   - DOMAIN-SUFFIX,adguard-dns.com
   - DOMAIN-SUFFIX,pro.xns.one
   - DOMAIN-SUFFIX,pro.xns.rodeo
