--- a/rule-provider/Microsoft.yaml
+++ b/rule-provider/Microsoft.yaml
@@ -563,3 +563,4 @@ payload:
   - DOMAIN-SUFFIX,xbx.lv
   - DOMAIN-SUFFIX,yammer.com
   - DOMAIN-SUFFIX,yammerusercontent.com
+  - DOMAIN-SUFFIX,microsoft
