--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -34,6 +34,7 @@ payload:
   - DOMAIN-SUFFIX,nxns.link
   - IP-CIDR,103.143.81.71/32,no-resolve
   - IP-CIDR,8.217.246.48/32,no-resolve
+  - IP-CIDR,47.239.81.175/32,no-resolve
   - IP-CIDR,45.249.245.247/32,no-resolve
   - IP-CIDR,103.150.8.98/32,no-resolve
 # > NTP(CN)
