--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -427,6 +427,8 @@ payload:
   - IP-CIDR,14.1.112.0/22,no-resolve
   - IP-CIDR,41.222.240.0/22,no-resolve
   - IP-CIDR,41.223.119.0/24,no-resolve
+  - IP-CIDR,43.135.64.0/18,no-resolve
+  - IP-CIDR,43.155.64.0/18,no-resolve
   - IP-CIDR,43.242.168.0/22,no-resolve
   - IP-CIDR,45.112.212.0/22,no-resolve
   - IP-CIDR,47.52.0.0/16,no-resolve
