--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -45,7 +45,7 @@ payload:
   - DOMAIN-SUFFIX,cn.ntppool.org
   - DOMAIN-SUFFIX,cn.pool.ntp.org
   - DOMAIN-SUFFIX,ubuntu.pool.ntp.org
-  # > NTP(apple)
+  - IP-CIDR,106.55.184.199/32,no-resolve
   - IP-CIDR6,2403:300:a30:3000::1f2/128,no-resolve
 # > Proxy plugin
   - PROCESS-NAME,v2ray
