--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1024,3 +1024,4 @@ payload:
   - DOMAIN-SUFFIX,faststone.org
   - DOMAIN-SUFFIX,zopim.com
   - DOMAIN-SUFFIX,s2s.singular.net
+  - DOMAIN-SUFFIX,timeweb.cloud
