--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1025,3 +1025,4 @@ payload:
   - DOMAIN-SUFFIX,zopim.com
   - DOMAIN-SUFFIX,s2s.singular.net
   - DOMAIN-SUFFIX,timeweb.cloud
+  - DOMAIN-SUFFIX,cpatrk.com
