--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -38,6 +38,7 @@ payload:
   - DOMAIN-SUFFIX,hk.kahkee.xns.one
   - DOMAIN-SUFFIX,hk-pro.nxns.link
   - DOMAIN-SUFFIX,jp.nxns.link
+  - DOMAIN-SUFFIX,hk.nxns.link
   - DOMAIN-SUFFIX,hk-kahkee.nxns.link
   - DOMAIN-SUFFIX,hk.pro.xns.rodeo
   - DOMAIN-SUFFIX,hk1.pro.xns.rodeo
