--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -57,6 +57,8 @@ payload:
   - IP-CIDR,114.118.7.163/32,no-resolve
   - IP-CIDR,106.55.184.199/32,no-resolve
   - IP-CIDR6,2403:300:a30:3000::1f2/128,no-resolve
+  - IP-CIDR6,2403:300:a16:4000::21/128,no-resolv
+  - IP-CIDR,203.107.6.88/32,no-resolve
 # > Proxy plugin
   - PROCESS-NAME,v2ray
   - PROCESS-NAME,ss-local
