--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -707,6 +707,7 @@ payload:
   - DOMAIN-SUFFIX,samsungcloud.com
   - DOMAIN-SUFFIX,samsungknox.com
   - DOMAIN-SUFFIX,vas.samsungapps.com
+  - DOMAIN-SUFFIX,v3.account.samsung.com
 # > SoftLayer
   - IP-CIDR,74.86.0.0/16,no-resolve
   - IP-CIDR,75.126.0.0/16,no-resolve
