--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -1028,3 +1028,8 @@ payload:
   - DOMAIN-SUFFIX,s2s.singular.net
   - DOMAIN-SUFFIX,timeweb.cloud
   - DOMAIN-SUFFIX,cpatrk.com
+  - DOMAIN-SUFFIX,bunny.net
+  - DOMAIN-SUFFIX,mili.one
+  - DOMAIN-SUFFIX,font.im
+  - DOMAIN-SUFFIX,beget.com
+  - DOMAIN-SUFFIX,noohub.ru
