--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3578,3 +3578,5 @@ payload:
   - DOMAIN-SUFFIX,hjenglish.com
   - DOMAIN-SUFFIX,hjapi.com
   - DOMAIN,google-ohttp-relay-safebrowsing.fastly-edge.com
+  - DOMAIN-SUFFIX,daocloud.io
+  - DOMAIN-SUFFIX,shouhougou.com
