--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -83,6 +83,7 @@ payload:
 # > Apple
   - DOMAIN-KEYWORD,courier.push.apple.com
   - DOMAIN-KEYWORD,ssl.ls.apple.com
+  - DOMAIN,gdmf-ados.apple.com
   - DOMAIN,apptrailers-ssl.itunes.apple.com
   - DOMAIN,gsa.apple.com
   - DOMAIN,fpinit.itunes.apple.com
