--- a/rule-provider/Proxy.yaml
+++ b/rule-provider/Proxy.yaml
@@ -118,6 +118,7 @@ payload:
   - DOMAIN,p151-acsegateway.icloud.com
   - DOMAIN,p151-quota.icloud.com
   - DOMAIN,partiality.itunes.apple.com
+  - DOMAIN,profile.gc.apple.com
   - DOMAIN,sandbox.itunes.apple.com
   - DOMAIN,setup.icloud.com
   - DOMAIN,speedysub.apps.apple.com
