--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -31,6 +31,8 @@ payload:
 # > DNS（AdGuardDNS）
   - DOMAIN-SUFFIX,adguard-dns.com
   - DOMAIN-SUFFIX,adguard-dns.io
+  - IP-CIDR,94.140.14.49/32,no-resolve
+  - IP-CIDR6,2a10:50c0::ded:ff/128,no-resolve
 # > DNS（NovaXNS）
   - DOMAIN-SUFFIX,hk.pro.xns.one
   - DOMAIN-SUFFIX,hk1.pro.xns.one
