--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -39,6 +39,8 @@ payload:
   - DOMAIN-SUFFIX,hk2.pro.xns.one
   - DOMAIN-SUFFIX,hk.kahkee.xns.one
   - DOMAIN-SUFFIX,hk-pro.nxns.link
+  - DOMAIN-SUFFIX,jp.pro.xns.one
+  - DOMAIN-SUFFIX,jp.kahkee.xns.one
   - DOMAIN-SUFFIX,jp.nxns.link
   - DOMAIN-SUFFIX,hk.nxns.link
   - DOMAIN-SUFFIX,hk-pro.nxns.link
