--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -51,6 +51,7 @@ payload:
   - DOMAIN-SUFFIX,jp.kahkee.xns.rodeo
   - IP-CIDR,103.143.81.71/32,no-resolve
   - IP-CIDR,8.217.246.48/32,no-resolve
+  - IP-CIDR,8.217.206.155/32,no-resolve
   - IP-CIDR,47.239.81.175/32,no-resolve
   - IP-CIDR,45.249.245.247/32,no-resolve
   - IP-CIDR,103.150.8.98/32,no-resolve
