--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -34,21 +34,22 @@ payload:
   - IP-CIDR,94.140.14.49/32,no-resolve
   - IP-CIDR6,2a10:50c0::ded:ff/128,no-resolve
 # > DNS（NovaXNS）
-  - DOMAIN-SUFFIX,hk.pro.xns.one
-  - DOMAIN-SUFFIX,hk1.pro.xns.one
-  - DOMAIN-SUFFIX,hk2.pro.xns.one
-  - DOMAIN-SUFFIX,hk.kahkee.xns.one
-  - DOMAIN-SUFFIX,hk-pro.nxns.link
-  - DOMAIN-SUFFIX,jp.pro.xns.one
-  - DOMAIN-SUFFIX,jp.kahkee.xns.one
-  - DOMAIN-SUFFIX,jp.nxns.link
-  - DOMAIN-SUFFIX,hk.nxns.link
-  - DOMAIN-SUFFIX,hk-pro.nxns.link
   - DOMAIN-SUFFIX,hk-kahkee.nxns.link
+  - DOMAIN-SUFFIX,hk-pro.nxns.link
+  - DOMAIN-SUFFIX,hk.kahkee.xns.one
+  - DOMAIN-SUFFIX,hk.nxns.link
+  - DOMAIN-SUFFIX,hk.pro.xns.one
   - DOMAIN-SUFFIX,hk.pro.xns.rodeo
+  - DOMAIN-SUFFIX,hk1.pro.xns.one
   - DOMAIN-SUFFIX,hk1.pro.xns.rodeo
-  - DOMAIN-SUFFIX,jp.pro.xns.rodeo
+  - DOMAIN-SUFFIX,hk2.pro.xns.one
+  - DOMAIN-SUFFIX,jp.kahkee.xns.one
   - DOMAIN-SUFFIX,jp.kahkee.xns.rodeo
+  - DOMAIN-SUFFIX,jp.nxns.link
+  - DOMAIN-SUFFIX,jp.pro.xns.one
+  - DOMAIN-SUFFIX,jp.pro.xns.rodeo
+  - DOMAIN-SUFFIX,kr.pro.xns.one
+  - DOMAIN-SUFFIX,sg.kahkee.xns.one
   - DOMAIN-SUFFIX,vxcdn.novaxns.one
   - IP-CIDR,103.143.81.71/32,no-resolve
   - IP-CIDR,8.217.246.48/32,no-resolve
