--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -51,13 +51,16 @@ payload:
   - DOMAIN-SUFFIX,kr.pro.xns.one
   - DOMAIN-SUFFIX,sg.kahkee.xns.one
   - DOMAIN-SUFFIX,vxcdn.novaxns.one
+  - IP-CIDR,103.150.8.98/32,no-resolve
   - IP-CIDR,103.143.81.71/32,no-resolve
-  - IP-CIDR,8.217.246.48/32,no-resolve
-  - IP-CIDR,8.217.206.155/32,no-resolve
   - IP-CIDR,47.239.81.175/32,no-resolve
   - IP-CIDR,45.249.245.247/32,no-resolve
-  - IP-CIDR,103.150.8.98/32,no-resolve
+  - IP-CIDR,45.141.139.16/32,no-resolve
+  - IP-CIDR,43.133.58.4/32,no-resolve
+  - IP-CIDR,8.217.246.48/32,no-resolve
+  - IP-CIDR,8.217.206.155/32,no-resolve
   - IP-CIDR6,2001:df1:7880:100::5e/128,no-resolve
+  - IP-CIDR6,2a12:a302:1:a350::2938/128,no-resolve
 # > NTP(CN)
   - DOMAIN-SUFFIX,android.pool.ntp.org
   - DOMAIN-SUFFIX,cn.ntppool.org
