--- a/rule-provider/Generally·Media.yaml
+++ b/rule-provider/Generally·Media.yaml
@@ -91,6 +91,7 @@ payload:
   - DOMAIN-SUFFIX,porn87.com
   - DOMAIN-SUFFIX,pornhub.com
   - DOMAIN-SUFFIX,pornfhd.com
+  - DOMAIN-SUFFIX,phncdn.com
   - DOMAIN-SUFFIX,jwpcdn.com
   - DOMAIN-SUFFIX,javmost.com
   - DOMAIN-SUFFIX,javhdporn.net
