--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3587,3 +3587,4 @@ payload:
   - DOMAIN-SUFFIX,daocloud.io
   - DOMAIN-SUFFIX,shouhougou.com
   - DOMAIN-SUFFIX,collegeboard.org
+  - DOMAIN-SUFFIX,gubo.org
