--- a/rule-provider/Special.yaml
+++ b/rule-provider/Special.yaml
@@ -131,4 +131,5 @@ payload:
 # > SMTP
   - DOMAIN-KEYWORD,SMTP.
 # > UUBooster
-  - PROCESS-NAME,UUBooster
+  - PROCESS-NAME,uugamebooster
+  - DOMAIN-SUFFIX,uu.163.com
