--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3588,3 +3588,4 @@ payload:
   - DOMAIN-SUFFIX,shouhougou.com
   - DOMAIN-SUFFIX,collegeboard.org
   - DOMAIN-SUFFIX,gubo.org
+  - DOMAIN-SUFFIX,tdatamaster.com
