--- a/rule-provider/Domestic.yaml
+++ b/rule-provider/Domestic.yaml
@@ -3589,3 +3589,4 @@ payload:
   - DOMAIN-SUFFIX,collegeboard.org
   - DOMAIN-SUFFIX,gubo.org
   - DOMAIN-SUFFIX,tdatamaster.com
+  - DOMAIN-SUFFIX,onethingpcs.com
